# awa-batch-template

./: .env.sample  .gitignore  BLUE_GREEN.md  Develop.md  Dockerfile  EC2_FARGATE_DIFFERENCES.md  EC2_SCALING_STRATEGY.md  FARGATE_SCALING_STRATEGY.md  README.md  claude.md  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy-on-release.yml
data/: params_sample1.json  sample1_data.csv
docker/: Dockerfile
example/batch/: README.md  pyproject.toml
example/batch/container/latest/: Dockerfile  README.md  build_and_push.sh  pyproject.toml  run_batch.py
example/batch/container/test/: Dockerfile  README.md  build_and_push.sh  pyproject.toml  requirements.txt  run_batch.py
example/batch/docker/: DockerTestfile  Dockerfile  build_and_push.sh
example/batch/job/: README.md  README_FARGATE.md  sample_params.json  submit_ec2_job.py  submit_fargate_job.py
example/batch/job/version_test/: Makefile  README.md  config.py  ec2_simple_submit_job.py  ec2_submit_array_job.py  ec2_submit_job_with_overrides.py  ec2_submit_job_with_params.py  ec2_submit_resource_job.py  fargate_simple_submit_job.py  fargate_submit_array_job.py  fargate_submit_job_with_env_override.py  fargate_submit_job_with_overrides.py  fargate_submit_job_with_params.py  fargate_submit_resource_job.py  parameters.json  pyproject.toml  run_batch.py
example/batch/src/: run_batch_test.py
example/batch/terraform/: Makefile  README.md
example/batch/terraform/environments/dev/ecr/: README.md  main.tf  outputs.tf  variables.tf
example/batch/terraform/environments/dev/iam/: main.tf  outputs.tf  terraform.tfvars  variables.tf
example/batch/terraform/environments/dev/network/: main.tf  outputs.tf  terraform.tfvars  variables.tf
example/batch/terraform/environments/dev/resources_ec2/: main.tf  outputs.tf  terraform.tfvars  variables.tf
example/batch/terraform/environments/dev/resources_ec2_testing/: main.tf  terraform.tfvars  variables.tf
example/batch/terraform/environments/dev/resources_fargate/: main.tf  outputs.tf  terraform.tfstate.1744351940.backup  terraform.tfstate.1744367870.backup  terraform.tfvars  variables.tf
example/batch/terraform/environments/dev/resources_fargate_testing/: main.tf  outputs.tf  terraform.tfvars  variables.tf
example/batch/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
example/batch/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
example/batch/terraform/modules/network/: main.tf  outputs.tf  variables.tf
example/batch/terraform/modules/resources_ec2/: batch_failure_alert.tf  lambda_slack_notifier.py  main.tf  outputs.tf  variables.tf
example/batch/terraform/modules/resources_fargate/: batch.tf  batch_failure_alert.tf  iam.tf  kms.tf  logging.tf  main.tf  outputs.tf  security.tf  variables.tf
example/infra/batch/docker/: Dockerfile
example/infra/batch/src/: README.md  pyproject.toml  run_batch.py
example/infra/batch/terraform/: ecr.tf  s3.tf  vpc.tf
example/infra/sagemaker/src/: run_sagemaker.py
infra/batch/docker/: Dockerfile
infra/batch/src/: README.md  pyproject.toml  run_batch.py
infra/batch/terraform/: batch_main.tf  outputs.tf
infra/sagemaker/docker/: Dockerfile
infra/sagemaker/src/: README.md  pipeline.py  pyproject.toml  run_sagemaker.py
samples/: params_sample1.json
scripts/: build.sh  deploy.sh  lint.sh
src/: batch_cli.py  cli.py  config.py  errors.py  main.py  models.py  requirements.txt
src/batch_processor/: cli.py  config.py  errors.py  logger_config.py  main.py  models.py  schemas.py
terraform/: batch.tf  batch_sample1.tf  main.tf  variables.tf
tests/: conftest.py  test_config.py  test_sample1.py
