[tool.poetry]
name = "awa-batch-processor"
version = "0.1.0"
description = "AWS Batch processor template with multiple commands"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}] # include="batch_job", from="src" -> include="src"

[tool.poetry.dependencies]
python = "^3.11" # Pythonバージョンを3.11以降に変更
boto3 = "^1.28.0"
click = "^8.1.6"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pandas = "^2.0.0"
numpy = "^1.26.0" # NumPyのバージョンを固定
pandera = "^0.17.0" # Pydantic v2互換バージョンに変更
multimethod = ">=1.10,<2.0" # multimethodのバージョンを固定
structlog = "^23.1.0" # メイン依存関係に追加
python-json-logger = "^2.0.7" # メイン依存関係に追加
fire = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
ruff = "^0.1.0" # Ruffを追加
pyright = "^1.1.358" # Pyrightを追加

[tool.ruff]
# Python 3.11 をターゲットとする
target-version = "py311" # Ruffのターゲットバージョンを変更
line-length = 88

# 使用するルールセット (デフォルト + isort, pylintの一部)
select = ["E", "F", "W", "I", "UP", "PL"]

# 無視するルール (例: print文、main関数のステートメント数)
ignore = ["E501", "T201", "PLR0915"]

# 除外するファイル/ディレクトリ
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.isort]
known-first-party = ["src"] # batch_job -> src

[tool.pytest.ini_options]
# 特定の警告を無視する設定
filterwarnings = [
    "ignore::DeprecationWarning:multimethod.*:",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# cli と batch-cli のエントリポイントを main 関数に変更 (パスも修正)
batch-cli = "src.batch_cli:main" # src.batch_job.batch_cli -> src.batch_cli
cli = "src.cli:main" # src.batch_job.cli -> src.cli
