[tool.poetry]
name = "batch"
version = "0.1.0"
description = ""
authors = ["tkc <tkc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
batch_processor = { git = "https://github.com/tkc/awa-batch-template.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
