[project]
name = "batch_runner"
version = "0.1.0"
description = ""
authors = [
    { name = "yourname", email = "yourname@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "batch_processor @ git+https://github.com/tkc/awa-batch-template-client.git@v0.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# ここにパッケージの場所を指定
[tool.hatch.build.targets.wheel]
packages = ["."]  # もしくはソースコードがあるディレクトリの正確な場所
